--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@hapi/hapi": "^20.1.0",
+    "@hapi/jwt": "^3.2.0",
     "auto-bind": "^4.0.0",
     "dotenv": "^16.3.1",
     "joi": "^17.9.2",
