--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@hapi/hapi": "^20.1.0",
     "@hapi/jwt": "^3.2.0",
     "auto-bind": "^4.0.0",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
     "joi": "^17.9.2",
     "nanoid": "^3.1.20",
